syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

package endpoint;

service EndpointService {
  rpc EndpointRequest(EndpointRequestRequest) returns (EndpointRequestResponse);
}

message EndpointRequestRequest {
  string stub_id = 1;
  string method = 2;
  string path = 3;
  bytes headers = 4;
  bytes payload = 5;
}

message EndpointRequestResponse {
  bool ok = 1;
  bytes response = 2;
}
